erDiagram
    %% Entidades principales
    Artista {
        int artista_id PK
        string nombre
        text biografia
        date fecha_nacimiento
        string nacionalidad
        string foto_url
        decimal porcentaje_ganancia
    }

    Genero {
        int genero_id PK
        string nombre
        string descripcion
    }

    Epoca {
        int epoca_id PK
        string nombre
        int anio_inicio
        int anio_fin
        string descripcion
    }

    Obra {
        int obra_id PK
        string nombre
        string codigo_inventario
        int artista_id FK
        int genero_id FK
        int epoca_id FK
        decimal precio_venta
        date fecha_creacion
        string estatus  "Disponible, Reservada, Vendida"
        string foto_url
        text descripcion
    }

    %% Especializaciones de Obra
    Pintura {
        int obra_id PK,FK
        string tecnica
        string soporte
        float ancho
        float largo
    }

    Escultura {
        int obra_id PK,FK
        float peso
        float ancho
        float largo
        float profundidad
        string material  "podría ser FK a Material"
    }

    Fotografia {
        int obra_id PK,FK
        string tecnica_fotografica
        string soporte_fisico
        float ancho
        float alto
        int tiraje
        string modelo_camara
        string velocidad_obturacion
        string apertura
        int iso
        int resolucion
        datetime fecha_captura
    }

    Ceramica {
        int obra_id PK,FK
        string tipo_arcilla
        string tecnica_modelado
        string tecnica_coccion
        string tipo_esmaltado
        float alto
        float ancho
        float profundidad
        float diametro
        string funcionalidad
    }

    Orfebreria {
        int obra_id PK,FK
        float peso
        float alto
        float ancho
        float profundidad
        float diametro
        int tipo_objeto_id FK
        string motivos
    }

    %% Catálogos para atributos multivaluados
    Material {
        int material_id PK
        string nombre
        string descripcion
    }

    Tecnica {
        int tecnica_id PK
        string nombre
        string descripcion
    }

    TipoObjeto {
        int tipo_objeto_id PK
        string nombre
        string descripcion
    }

    %% Tablas intermedias (muchos a muchos)
    Artista_Genero {
        int artista_id PK,FK
        int genero_id PK,FK
    }

    Obra_Material {
        int obra_id PK,FK
        int material_id PK,FK
    }

    Obra_Tecnica {
        int obra_id PK,FK
        int tecnica_id PK,FK
    }

    Orfebreria_Metal {
        int orfebreria_id PK,FK
        int material_id PK,FK
    }

    Orfebreria_Tecnica {
        int orfebreria_id PK,FK
        int tecnica_id PK,FK
    }

    %% Entidades de usuarios y ventas
    Comprador {
        int comprador_id PK
        string nombre_completo
        string email
        string login
        string password_hash
        string codigo_seguridad
        text direccion_envio
        string telefono
    }

    Empleado {
        int empleado_id PK
        string nombre
        string login
        string password_hash
    }

    Factura {
        int factura_id PK
        int comprador_id FK
        int empleado_id FK
        int obra_id FK
        datetime fecha_emision
        decimal precio_obra
        decimal iva
        decimal porcentaje_ganancia
        decimal ganancia_museo
        decimal total
        text datos_envio
    }

    Membresia {
        int membresia_id PK
        int comprador_id FK
        datetime fecha_pago
        decimal monto
    }

    PreguntaSeguridad {
        int pregunta_id PK
        string pregunta_texto
    }

    RespuestaSeguridad {
        int comprador_id PK,FK
        int pregunta_id PK,FK
        string respuesta_hash
    }

    %% Relaciones Base
    Artista ||--o{ Obra : "crea"
    Genero ||--o{ Obra : "clasifica"
    Epoca ||--o{ Obra : "pertenece a"

    %% Relaciones de Herencia/Especialización
    Obra ||--|| Pintura : "es una"
    Obra ||--|| Escultura : "es una"
    Obra ||--|| Fotografia : "es una"
    Obra ||--|| Ceramica : "es una"
    Obra ||--|| Orfebreria : "es una"

    %% Relaciones N:M resueltas mediante Tablas Intermedias
    Artista ||--o{ Artista_Genero : "tiene"
    Genero ||--o{ Artista_Genero : "asignado a"

    Obra ||--o{ Obra_Material : "compuesto por"
    Material ||--o{ Obra_Material : "forma parte de"

    Obra ||--o{ Obra_Tecnica : "realizada con"
    Tecnica ||--o{ Obra_Tecnica : "aplicada en"

    TipoObjeto ||--o{ Orfebreria : "define a"
    
    Orfebreria ||--o{ Orfebreria_Metal : "usa metales"
    Material ||--o{ Orfebreria_Metal : "usado en"

    Orfebreria ||--o{ Orfebreria_Tecnica : "emplea técnicas"
    Tecnica ||--o{ Orfebreria_Tecnica : "aplicada en"

    %% Relaciones de Usuarios y Facturación
    Comprador ||--o{ Factura : "realiza"
    Empleado ||--o{ Factura : "emite"
    Obra ||--o| Factura : "se vende en"
    Comprador ||--o{ Membresia : "paga"

    Comprador ||--o{ RespuestaSeguridad : "provee"
    PreguntaSeguridad ||--o{ RespuestaSeguridad : "tiene"